--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -137,7 +137,7 @@
             <img class="footer__logo" src="../img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
-            <a class="footer__callme" href="tel:+442080891644">Call us</a>
+            <!-- <a class="footer__callme" href="tel:+442080891644">Call us</a> -->
           </li>
           <li class="footer__social">
             <a class="footer__link  footer__link--fb" href="https://www.facebook.com/forex24com/" target="_blank"></a>
