--- a/forexglobal/trading/product-specification.html
+++ b/forexglobal/trading/product-specification.html
@@ -922,11 +922,13 @@
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
       <div id="Commodities" class="tab__content">
-        <h3>Commodities</h3>
-        <p>Commodity markets have had a major impact on nations and people throughout history. Currently there are about 50 major commodity markets worldwide that facilitate trading of approximately 100 raw or primary products. There are different categories of commodities, all supported by the same basic economic principles: lower supply equals higher prices and vice versa.</p>
-        <p>At Forex24 you can trade up to 3 CFDs on Commodities such as COCOA, COFFE and SOYBEAN with very favourable terms.</p>
-        <table class="tab__table">
-        	<tr>
+        <div class="tab__header">
+          <h3>Commodities</h3>
+          <p>Commodity markets have had a major impact on nations and people throughout history. Currently there are about 50 major commodity markets worldwide that facilitate trading of approximately 100 raw or primary products. There are different categories of commodities, all supported by the same basic economic principles: lower supply equals higher prices and vice versa.</p>
+          <p>At Forex24 you can trade up to 3 CFDs on Commodities such as COCOA, COFFE and SOYBEAN with very favourable terms.</p>
+        </div>
+        <table class="tab__table  tab__table--product">
+        	<tr class="tab__name  tab__name--commodities">
         		<th>Symbols</th>
         		<th>Descripion</th>
         		<th>Currency</th>
@@ -977,11 +979,13 @@
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
       <div id="Metals" class="tab__content">
-        <h3>Metals</h3>
-        <p>Metals are physical commodities and they have always played an important role in history and will continue to be valued. Metals such as Gold and Silver have been recognized as valuable assets and have always been a very popular choice of investing. Precious metals, especially Gold has always been referred to as ‘Safe Heaven’ in times of economic uncertainty.</p>
-        <p>Forex24 offers investors, who do not want to face economic turbulence, access to three fives of metals: Gold, Silver, Palladium, Platinum and Copper.</p>
-        <table class="tab__table">
-        	<tr>
+        <div class="tab__header">
+          <h3>Metals</h3>
+          <p>Metals are physical commodities and they have always played an important role in history and will continue to be valued. Metals such as Gold and Silver have been recognized as valuable assets and have always been a very popular choice of investing. Precious metals, especially Gold has always been referred to as ‘Safe Heaven’ in times of economic uncertainty.</p>
+          <p>Forex24 offers investors, who do not want to face economic turbulence, access to three fives of metals: Gold, Silver, Palladium, Platinum and Copper.</p>
+        </div>
+        <table class="tab__table  tab__table--product">
+        	<tr class="tab__name  tab__name--metals">
         		<th>Symbols</th>
         		<th>Descripion</th>
         		<th>Currency</th>
@@ -1206,11 +1210,13 @@
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
       <div id="Energies" class="tab__content">
-        <h3>Energies</h3>
-        <p>Oil and gas are the two most popular commodities. They are traded in heavy volumes around the clock offering multiple opportunities to online traders. Whether it is US Crude Oil (WTI), Brent Oil (Brent) or Natural Gas (NATGAS), energy commodities are quoted in USD.</p>
-        <p>At Forex24 you can trade u3 CFDs on energies such as Crude Oil,Brrend Oil and Natural Gas,  with very favourable terms.</p>        
-        <table class="tab__table">
-        	<tr>
+        <div class="tab__header">
+          <h3>Energies</h3>
+          <p>Oil and gas are the two most popular commodities. They are traded in heavy volumes around the clock offering multiple opportunities to online traders. Whether it is US Crude Oil (WTI), Brent Oil (Brent) or Natural Gas (NATGAS), energy commodities are quoted in USD.</p>
+          <p>At Forex24 you can trade u3 CFDs on energies such as Crude Oil,Brrend Oil and Natural Gas,  with very favourable terms.</p> 
+        </div>
+        <table class="tab__table  tab__table--product">
+        	<tr class="tab__name  tab__name--energies">
         		<th>Symbols</th>
         		<th>Descripion</th>
         		<th>Currency</th>
@@ -1261,17 +1267,19 @@
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
       <div id="Indices" class="tab__content">
-        <h3>Indices</h3>
-        <p>An index is a statistical representation of an equity market through a basket of stocks. An index measures the value of a group of stocks and therefore investors can invest on indices that represent specific markets.</p>
-        <p>With Forex24 you can trade more than 10 of the world’s most prolific indices covering Asia, North America and Europe, including the renowned Dow Jones Industrial Average (DJIA) which is extremely popular with traders worldwide.</p>
-        <p>Dividend Adjustments on Cash Indices CFDs<br>CFDs on Indices will be subject to dividend adjustments. When a constituent member of an index pays Dividends to its Shareholders, dividend adjustments will be made to accounts of clients holding a position on the index.</p>
-        <ul>
-          <li>Long Positions (Buy) – Clients holding long positions on the ex-div date will receive a dividend in the form of a cash adjustment (CD)</li>
-          <li>Short Positions (Sell) – Clients holding short positions on the ex-div date will be charged the dividend amount in the form of a cash adjustment (CW)</li>
-        </ul>
-        <p>Calculated as Follows:<br>Dividend adjustment = Index Dividend declared x position size in Lots.</p>
-        <table class="tab__table">
-        	<tr>
+        <div class="tab__header">
+          <h3>Indices</h3>
+          <p>An index is a statistical representation of an equity market through a basket of stocks. An index measures the value of a group of stocks and therefore investors can invest on indices that represent specific markets.</p>
+          <p>With Forex24 you can trade more than 10 of the world’s most prolific indices covering Asia, North America and Europe, including the renowned Dow Jones Industrial Average (DJIA) which is extremely popular with traders worldwide.</p>
+          <p>Dividend Adjustments on Cash Indices CFDs<br>CFDs on Indices will be subject to dividend adjustments. When a constituent member of an index pays Dividends to its Shareholders, dividend adjustments will be made to accounts of clients holding a position on the index.</p>
+          <ul>
+            <li>Long Positions (Buy) – Clients holding long positions on the ex-div date will receive a dividend in the form of a cash adjustment (CD)</li>
+            <li>Short Positions (Sell) – Clients holding short positions on the ex-div date will be charged the dividend amount in the form of a cash adjustment (CW)</li>
+          </ul>
+          <p>Calculated as Follows:<br>Dividend adjustment = Index Dividend declared x position size in Lots.</p>
+        </div>
+        <table class="tab__table  tab__table--product">
+        	<tr class="tab__name  tab__name--indices">
         		<th>Symbols</th>
         		<th>Descripion</th>
         		<th>Currency</th>
@@ -1434,17 +1442,19 @@
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
       <div id="Equities" class="tab__content">
-        <h3>Equities</h3>
-        <p>Stocks or Equities belong to one of the major asset classes. Stocks are significant as they stand for the real value of one’s stake in a corporation listed in a stock exchange.</p>
-        <p>At Forex24 you can trade 40+ Stock CFDs that are traded in world major equity markets, such as Apple, Microsoft, Alibaba and Amazon.</p>
-        <p>Dividends Adjustments on Stocks CFDs<br>CFDs on stocks are subject to dividend adjustments. When a stock security pays dividend to its shareholders, dividend adjustments will be made to the trading accounts of clients who hold a position on the Stock.</p>
-        <ul>
-          <li>Long Positions (Buy) – Clients holding long positions on the ex-div date will receive a dividend in the form of a cash adjustment (CD)</li>
-          <li>Short Positions (Sell) – Clients holding short positions on the ex-div date will be charged the dividend amount in the form of a cash adjustment (CW)</li>
-        </ul>
-        <p>Calculated as Follows:<br>Dividend adjustment = Stock Dividend declared x position size in Lots.</p>
-        <table class="tab__table">
-        	<tr>
+        <div class="tab__header">
+          <h3>Equities</h3>
+          <p>Stocks or Equities belong to one of the major asset classes. Stocks are significant as they stand for the real value of one’s stake in a corporation listed in a stock exchange.</p>
+          <p>At Forex24 you can trade 40+ Stock CFDs that are traded in world major equity markets, such as Apple, Microsoft, Alibaba and Amazon.</p>
+          <p>Dividends Adjustments on Stocks CFDs<br>CFDs on stocks are subject to dividend adjustments. When a stock security pays dividend to its shareholders, dividend adjustments will be made to the trading accounts of clients who hold a position on the Stock.</p>
+          <ul>
+            <li>Long Positions (Buy) – Clients holding long positions on the ex-div date will receive a dividend in the form of a cash adjustment (CD)</li>
+            <li>Short Positions (Sell) – Clients holding short positions on the ex-div date will be charged the dividend amount in the form of a cash adjustment (CW)</li>
+          </ul>
+          <p>Calculated as Follows:<br>Dividend adjustment = Stock Dividend declared x position size in Lots.</p>
+        </div>
+        <table class="tab__table  tab__table--product">
+        	<tr class="tab__name  tab__name--equities">
         		<th>Symbols</th>
         		<th>Descripion</th>
         		<th>Currency</th>
@@ -2141,7 +2151,7 @@
             <img class="footer__logo" src="../img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
-            <a class="footer__callme" href="tel:+442080891644">Call us</a>
+            <!-- <a class="footer__callme" href="tel:+442080891644">Call us</a> -->
           </li>
           <li class="footer__social">
             <a class="footer__link  footer__link--fb" href="https://www.facebook.com/forex24com/" target="_blank"></a>
