--- a/forexglobal/client/demo.html
+++ b/forexglobal/client/demo.html
@@ -100,16 +100,16 @@
       </nav>
     </div>
   </header>
-  <section class="register">
+  <section class="client">
     <div class="container">
-      <h1 class="register__name">Register Demo</h1>
-      <h2 class="register__subname">Pre-Registration</h2>
-      <form class="register__form" action="" method="post">
-        <div class="register__flex">
+      <h1 class="client__name">Register Demo</h1>
+      <h2 class="client__subname">Pre-Registration</h2>
+      <form class="client__form" action="" method="post">
+        <div class="client__flex">
           <input type="text" name="First Name" placeholder="First Name" required>
           <input type="text" name="Last Name" placeholder="Last Name" required>
         </div>
-        <div class="register__flex">
+        <div class="client__flex">
           <select name="Country" tabindex="0" required>
             <option hidden>Country</option>
             <option value="AF">Afghanistan</option>
@@ -364,7 +364,7 @@
           </select>
           <input type="tel" name="Telephone" placeholder="Telephone">
         </div>
-        <div class="register__flex">
+        <div class="client__flex">
           <input type="email" name="Email" placeholder="Email" required>
           <select name="Currency" tabindex="0" required>
             <option hidden>Currency</option>
@@ -373,7 +373,7 @@
             <option value="GBP">GBP</option>
           </select>
         </div>
-        <div class="register__flex">
+        <div class="client__flex">
           <select name="Leverage" tabindex="0" required>
             <option hidden>Leverage</option>
             <option value="1:10">1:10</option>
@@ -395,13 +395,13 @@
             <option value="5000000">500000</option>
           </select>
         </div>
-        <a class="register__demo" href="../img/pdf/Demo-Account-Disclosure.pdf" target="_blank">Read Demo Disclaimer</a>
-        <div class="register__flex">
+        <a class="client__demo" href="../img/pdf/Demo-Account-Disclosure.pdf" target="_blank">Read Demo Disclaimer</a>
+        <div class="client__flex">
           <input type="hidden">
-          <button class="register__next" type="submit" name="Next Step">Register</button>
+          <button class="client__next" type="submit" name="Next Step">Register</button>
         </div>
       </form>
-      <p class="register__warning">
+      <p class="client__warning">
         <b>Risk Warning:</b>
         Our products are traded on margin and carry a high level of risk and it is possible to lose all your capital. These products may not be suitable for everyone and you should ensure that you understand the risks involved.
       </p>
@@ -477,7 +477,7 @@
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
       <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
-      <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
+      <p class="footer__text">The Company is also cliented with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
   <script src="../js/main.min.js" async></script>
