--- a/forexglobal/client/real/step-2.html
+++ b/forexglobal/client/real/step-2.html
@@ -107,7 +107,7 @@
       <form class="client__form" action="" method="post">
         <div class="client__flex">
           <input type="date" name="Date of Birth" required>
-          <input type="text" name="Address Line" placeholder="Address Line" required>
+          <input type="text" name="Address Line" placeholder="Address" required>
         </div>
         <div class="client__flex">
           <input type="text" name="City/Town" placeholder="City/Town">
@@ -123,6 +123,10 @@
             No
             <input type="radio" name="US" value="No">
           </label>
+        </div>
+        <b class="client__question">Provide us with your Taxpayer Identification Number ("TIN")</b>
+        <div class="client__flex  client__flex--center">
+          <input type="text" name="TIN" placeholder="TIN">
         </div>
         <b class="client__question">Are you a <a href="../../img/pdf/Politically-Exposed-Person-Definition.pdf" target="_blank">Politically Exposed Person</a> (PEP)?</b>
         <div class="client__flex  client__flex--center">
@@ -222,6 +226,49 @@
             <input type="radio" name="US" value="No">
           </label>
         </div>
+        <b class="client__question">Which of the following financial products have you traded in the last 3 years?</b>
+        <div class="client__flex  client__flex--center">
+          <label class="client__label">
+            CFD's (Forex, Metals, Commodities)
+            <input type="checkbox" name="US" value="Yes">
+          </label>
+          <label class="client__label">
+            Other Derivatives (Swaps, Futures, Options)
+            <input type="checkbox" name="US" value="No">
+          </label>
+          <label class="client__label">
+            Shares/Bonds
+            <input type="checkbox" name="US" value="No">
+          </label>
+        </div>
+        <div class="client__flex  client__flex--center">
+          <select name="Frequency of transactions" tabindex="0" required>
+            <option hidden>Frequency of transactions</option>
+            <option value="Daily">Daily</option>
+            <option value="Weekly">Weekly</option>
+            <option value="Monthly">Monthly</option>
+            <option value="Yearly">Yearly</option>
+          </select>
+          <!-- <label class="client__label">
+            Shares/Bonds
+            <input type="checkbox" name="US" value="No">
+          </label> -->
+        </div>
+        <div class="client__flex  client__flex--center">
+          <select name="Average volume size per transaction (USD)" tabindex="0" required>
+            <option hidden>Average volume size per transaction (USD)</option>
+            <option value="Less than $10,000">Less than $10,000</option>
+            <option value="$10,000 – $20,000">$10,000 – $20,000</option>
+            <option value="$20,000 – $30,000">$20,000 – $30,000</option>
+            <option value="$30,000 – $40,000">$30,000 – $40,000</option>
+            <option value="$40,000 – $50,000">$40,000 – $50,000</option>
+            <option value="$50,000 – $100,000">$50,000 – $100,000</option>
+            <option value="$100,000 – $150,000">$100,000 – $150,000</option>
+            <option value="$150,000 – $200,000">$150,000 – $200,000</option>
+            <option value="$200,000 – $250,000">$200,000 – $250,000</option>
+            <option value="$250,000 or more">$250,000 or more</option>
+          </select>
+        </div>
         <b class="client__question">Have you attended a course or seminar on CFDs or Forex?</b>
         <div class="client__flex  client__flex--center">
           <label class="client__label">
@@ -293,6 +340,20 @@
             <option value="zulutrade">ZuluTrade</option>
             <option value="gold">Gold</option>
             <option value="swap free">Swap Free</option>
+          </select>
+        </div>
+        <div class="client__flex">
+          <select name="Currency" tabindex="0" required>
+            <option hidden>Currency</option>
+            <option value="USD">USD</option>
+            <option value="EUR">EUR</option>
+            <option value="GBP">GBP</option>
+          </select>
+          <select name="Leverage" tabindex="0" required>
+            <option hidden>Leverage</option>
+            <option value="1:10">1:10</option>
+            <option value="1:30">1:30</option>
+            <option value="1:50">1:50</option>
           </select>
         </div>
         <hr class="client__hr">
