--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -103,10 +103,10 @@
   <section class="inner">
     <div class="container">
       <h1 class="inner__name">Account comparison</h1>
-      <div class="tab">
-        <button class="tab__button  tab__button--bronze  tab__active" onclick="openTab(event, 'Bronze')">Mini Bronze</button>
-        <button class="tab__button  tab__button--silver" onclick="openTab(event, 'Silver')">Classic Silver</button>
-        <button class="tab__button  tab__button--gold" onclick="openTab(event, 'Gold')">Premium Gold</button>
+      <div class="tab  tab--account">
+        <button class="tab__button  tab__button--account  tab__button--bronze  tab__active" onclick="openTab(event, 'Bronze')">Mini Bronze</button>
+        <button class="tab__button  tab__button--account  tab__button--silver" onclick="openTab(event, 'Silver')">Classic Silver</button>
+        <button class="tab__button  tab__button--account  tab__button--gold" onclick="openTab(event, 'Gold')">Premium Gold</button>
       </div>
       <div class="tab__anchor">
         <a class="tab__button  tab__button--forex">Forex</a>
@@ -121,7 +121,7 @@
           <div class="tab__header">
             <h3>Forex Pairs</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
           	<tr class="tab__name  tab__name--sticky">
           		<th>Symbol</th>
           		<th>Average Floating Spreads in pips</th>
@@ -702,7 +702,7 @@
           <div class="tab__header">
             <h3>Energies</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
           	<tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -753,7 +753,7 @@
           <div class="tab__header">
             <h3>Commodities</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
           	<tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -795,7 +795,7 @@
           <div class="tab__header">
             <h3>Metals</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
           	<tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -965,7 +965,7 @@
           <div class="tab__header">
             <h3>Indices</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
           	<tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -1071,7 +1071,7 @@
           <div class="tab__header">
             <h3>Equities</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
           	<tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -1531,7 +1531,7 @@
           <div class="tab__header">
             <h3>Forex Pairs</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Average Floating Spreads in Pips</th>
@@ -2117,7 +2117,7 @@
           <div class="tab__header">
             <h3>Energies</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -2168,7 +2168,7 @@
           <div class="tab__header">
             <h3>Commodities</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -2219,7 +2219,7 @@
           <div class="tab__header">
             <h3>Metals</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -2389,7 +2389,7 @@
           <div class="tab__header">
             <h3>Indices</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -2495,7 +2495,7 @@
           <div class="tab__header">
             <h3>Equities</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -2955,7 +2955,7 @@
           <div class="tab__header">
             <h3>Forex Pairs</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Average Floating Spreads in Pips</th>
@@ -3541,7 +3541,7 @@
           <div class="tab__header">
             <h3>Energies</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -3583,7 +3583,7 @@
           <div class="tab__header">
             <h3>Commodities</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -3625,7 +3625,7 @@
           <div class="tab__header">
             <h3>Metals</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -3795,7 +3795,7 @@
           <div class="tab__header">
             <h3>Indices</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
@@ -3901,7 +3901,7 @@
           <div class="tab__header">
             <h3>Equities</h3>
           </div>
-          <table class="tab__table  tab__table--product">
+          <table class="tab__table  tab__table--right">
             <tr class="tab__name  tab__name--sticky">
           		<th rowspan=2>Symbol</th>
           		<th rowspan=2>Spreads</th>
