--- a/forexglobal/trading/product-specification.html
+++ b/forexglobal/trading/product-specification.html
@@ -111,7 +111,7 @@
         <button class="tab__button  tab__button--indices" onclick="openTab(event, 'Indices')">Indices</button>
         <button class="tab__button  tab__button--equities" onclick="openTab(event, 'Equities')">Equities</button>
       </div>
-      <div id="Forex" class="tab__content  tab__content--forex">
+      <div id="Forex" class="tab__content  tab__content--product  tab__content--forex">
         <div class="tab__header">
           <h3>Forex</h3>
           <p>Foreign exchange or Forex is one of the largest and most liquid markets with over 5 trillion dollars traded daily. A trader can trade currencies against each other and based on the changing values of currencies over time he can make a profit or a loss. Exchange rates are defined by the market forces of supply and demand and are affected by geopolitical and economic events around the globe.</p>
@@ -124,7 +124,7 @@
             <li>No hidden fees</li>
           </ul>
         </div>
-        <table class="tab__table  tab__table--product">
+        <table class="tab__table  tab__table--right">
         	<tr class="tab__name  tab__name--forex">
         		<th>Symbols</th>
         		<th>Descripion</th>
@@ -921,13 +921,13 @@
         <p>Server Time = GMT+2 & GMT+3 DST</p>
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
-      <div id="Commodities" class="tab__content">
+      <div id="Commodities" class="tab__content  tab__content--product">
         <div class="tab__header">
           <h3>Commodities</h3>
           <p>Commodity markets have had a major impact on nations and people throughout history. Currently there are about 50 major commodity markets worldwide that facilitate trading of approximately 100 raw or primary products. There are different categories of commodities, all supported by the same basic economic principles: lower supply equals higher prices and vice versa.</p>
           <p>At Forex24 you can trade up to 3 CFDs on Commodities such as COCOA, COFFE and SOYBEAN with very favourable terms.</p>
         </div>
-        <table class="tab__table  tab__table--product">
+        <table class="tab__table  tab__table--right">
         	<tr class="tab__name  tab__name--commodities">
         		<th>Symbols</th>
         		<th>Descripion</th>
@@ -978,13 +978,13 @@
         <p>Server Time = GMT+2 & GMT+3 DST</p>
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
-      <div id="Metals" class="tab__content">
+      <div id="Metals" class="tab__content  tab__content--product">
         <div class="tab__header">
           <h3>Metals</h3>
           <p>Metals are physical commodities and they have always played an important role in history and will continue to be valued. Metals such as Gold and Silver have been recognized as valuable assets and have always been a very popular choice of investing. Precious metals, especially Gold has always been referred to as ‘Safe Heaven’ in times of economic uncertainty.</p>
           <p>Forex24 offers investors, who do not want to face economic turbulence, access to three fives of metals: Gold, Silver, Palladium, Platinum and Copper.</p>
         </div>
-        <table class="tab__table  tab__table--product">
+        <table class="tab__table  tab__table--right">
         	<tr class="tab__name  tab__name--metals">
         		<th>Symbols</th>
         		<th>Descripion</th>
@@ -1209,13 +1209,13 @@
         <p>Server Time = GMT+2 & GMT+3 DST</p>
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
-      <div id="Energies" class="tab__content">
+      <div id="Energies" class="tab__content  tab__content--product">
         <div class="tab__header">
           <h3>Energies</h3>
           <p>Oil and gas are the two most popular commodities. They are traded in heavy volumes around the clock offering multiple opportunities to online traders. Whether it is US Crude Oil (WTI), Brent Oil (Brent) or Natural Gas (NATGAS), energy commodities are quoted in USD.</p>
           <p>At Forex24 you can trade u3 CFDs on energies such as Crude Oil,Brrend Oil and Natural Gas,  with very favourable terms.</p> 
         </div>
-        <table class="tab__table  tab__table--product">
+        <table class="tab__table  tab__table--right">
         	<tr class="tab__name  tab__name--energies">
         		<th>Symbols</th>
         		<th>Descripion</th>
@@ -1266,7 +1266,7 @@
         <p>Server Time = GMT+2 & GMT+3 DST</p>
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
-      <div id="Indices" class="tab__content">
+      <div id="Indices" class="tab__content  tab__content--product">
         <div class="tab__header">
           <h3>Indices</h3>
           <p>An index is a statistical representation of an equity market through a basket of stocks. An index measures the value of a group of stocks and therefore investors can invest on indices that represent specific markets.</p>
@@ -1278,7 +1278,7 @@
           </ul>
           <p>Calculated as Follows:<br>Dividend adjustment = Index Dividend declared x position size in Lots.</p>
         </div>
-        <table class="tab__table  tab__table--product">
+        <table class="tab__table  tab__table--right">
         	<tr class="tab__name  tab__name--indices">
         		<th>Symbols</th>
         		<th>Descripion</th>
@@ -1441,7 +1441,7 @@
         <p>Server Time = GMT+2 & GMT+3 DST</p>
         <p>*Swap values are in points and may be adjusted daily based on market conditions and rates provided by our Price Provider applicable to all open positions. Triple swaps are applied every Wednesday.</p>
       </div>
-      <div id="Equities" class="tab__content">
+      <div id="Equities" class="tab__content  tab__content--product">
         <div class="tab__header">
           <h3>Equities</h3>
           <p>Stocks or Equities belong to one of the major asset classes. Stocks are significant as they stand for the real value of one’s stake in a corporation listed in a stock exchange.</p>
@@ -1453,7 +1453,7 @@
           </ul>
           <p>Calculated as Follows:<br>Dividend adjustment = Stock Dividend declared x position size in Lots.</p>
         </div>
-        <table class="tab__table  tab__table--product">
+        <table class="tab__table  tab__table--right">
         	<tr class="tab__name  tab__name--equities">
         		<th>Symbols</th>
         		<th>Descripion</th>
