--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -709,7 +709,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -723,7 +723,7 @@
           		<td rowspan=2>2%</td>
           	</tr>
           	<tr>
-          		<td>Floating</td>
+          		<!-- <td>Floating</td> -->
           	</tr>
           	<tr>
           		<td rowspan=2>UKOIL</td>
@@ -734,7 +734,7 @@
           		<td rowspan=2>2%</td>
           	</tr>
           	<tr>
-          		<td>Floating</td>
+          		<!-- <td>Floating</td> -->
           	</tr>
           	<tr>
           		<td rowspan=2>NATGAS</td>
@@ -745,7 +745,7 @@
           		<td rowspan=2>2%</td>
           	</tr>
           	<tr>
-          		<td>Floating</td>
+          		<!-- <td>Floating</td> -->
           	</tr>
           </table>
         </div>
@@ -760,7 +760,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -802,7 +802,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -972,7 +972,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -1078,7 +1078,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -1538,7 +1538,7 @@
           		<th colspan=3>Commission Per Lot</th>
           		<th rowspan=2>Leverage Up To</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -2124,7 +2124,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -2138,7 +2138,7 @@
           		<td rowspan=2>2%</td>
           	</tr>
           	<tr>
-          		<td>Floating</td>
+          		<!-- <td>Floating</td> -->
           	</tr>
           	<tr>
           		<td rowspan=2>UKOIL</td>
@@ -2149,7 +2149,7 @@
           		<td rowspan=2>2%</td>
           	</tr>
           	<tr>
-          		<td>Floating</td>
+          		<!-- <td>Floating</td> -->
           	</tr>
           	<tr>
           		<td rowspan=2>NATGAS</td>
@@ -2160,7 +2160,7 @@
           		<td rowspan=2>2%</td>
           	</tr>
           	<tr>
-          		<td>Floating</td>
+          		<!-- <td>Floating</td> -->
           	</tr>
           </table>
         </div>
@@ -2175,7 +2175,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -2226,7 +2226,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -2396,7 +2396,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -2502,7 +2502,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -2962,7 +2962,7 @@
           		<th colspan=3>Commission Per Lot</th>
           		<th rowspan=2>Leverage Up To</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -3548,7 +3548,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -3590,7 +3590,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -3632,7 +3632,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -3802,7 +3802,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
@@ -3908,7 +3908,7 @@
           		<th colspan=3>Commission Per Side</th>
           		<th rowspan=2>Margin Applies Per 1 Lot</th>
           	</tr>
-          	<tr>
+          	<tr class="tab__name  tab__name--sticky">
           		<td>USD</td>
           		<td>EUR</td>
           		<td>GBP</td>
