--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -31,7 +31,7 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../client/real/step-1.html">Real</a></li>
+              <li><a href="../client/real/step-1.php">Real</a></li>
               <li><a href="../client/demo.html">Demo</a></li>
               <li><a href="../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
@@ -127,7 +127,7 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="../client/real/step-1.html">Create account</a>
+          <a href="../client/real/step-1.php">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--silver">
           <h2>Classic Silver</h2>
@@ -151,7 +151,7 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="../client/real/step-1.html">Create account</a>
+          <a href="../client/real/step-1.php">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--gold">
           <h2>Premium Gold</h2>
@@ -175,7 +175,7 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="../client/real/step-1.html">Create account</a>
+          <a href="../client/real/step-1.php">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--zulu">
           <h2>ZuluTrade</h2>
