--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -31,7 +31,7 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../../client/real/step-1.html">Real</a></li>
+              <li><a href="../../client/real/step-1.php">Real</a></li>
               <li><a href="../../client/demo.html">Demo</a></li>
               <li><a>ZuluTrade</a></li>
             </ul>
@@ -116,7 +116,7 @@
         <p class="inner__sub">ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders</p>
         <p class="inner__text">A trader can execute trades manually or allocate a desirable amount to follow top performing traders, therefore diversifying the investment. The trader can also set risk management parameters in advance of any trading activity, in order to shield against any volatile trading strategy.</p>
         <p class="inner__text">ZuluTrade users are able to connect to the platform through the website and the available mobile applications. Innovative Mobile Apps for all major mobile platforms (iPhone, iPad, Android, Blackberry, and Kindle Fire) offer full functionality and the ability to be in control of your account anywhere, anytime.</p>
-        <a class="zulu__start" href="../../client/real/step-1.html">Start Trading</a>
+        <a class="zulu__start" href="../../client/real/step-1.php">Start Trading</a>
         <hr>
         <div class="zulu__flex  zulu__flex--key">
           <div class="zulu__mockup"></div>
@@ -1849,7 +1849,7 @@
           <div class="container">
             <h2>Try It Now</h2>
             <div class="inner__links">
-              <a class="inner__real" href="../../client/real/step-1.html">
+              <a class="inner__real" href="../../client/real/step-1.php">
                 Real account<br>
                 <span>start live trading</span>
               </a>
