--- a/forexglobal/faq.html
+++ b/forexglobal/faq.html
@@ -31,7 +31,7 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="client/real/step-1.html">Real</a></li>
+              <li><a href="client/real/step-1.php">Real</a></li>
               <li><a href="client/demo.html">Demo</a></li>
               <li><a href="trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
