--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -33,7 +33,7 @@
             <li>
               <a class="header__open" href="#">Open account</a>
               <ul class="header__accounts  header__accounts--closed">
-                <li><a href="client/real/step-1.html">Real</a></li>
+                <li><a href="client/real/step-1.php">Real</a></li>
                 <li><a href="client/demo.html">Demo</a></li>
                 <li><a href="trading/platforms/zulutrade.html">ZuluTrade</a></li>
               </ul>
@@ -119,7 +119,7 @@
         <div class="welcome__content">
           <h1 class="welcome__name">Multi-Platform Trading</h1>
           <p class="welcome__text">MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use. It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
-          <a class="welcome__button" href="client/real/step-1.html">Create account</a>
+          <a class="welcome__button" href="client/real/step-1.php">Create account</a>
         </div>
       </div>
     </div>
@@ -217,7 +217,7 @@
             <li>Multi-platforms</li>
             <li>Fast Deposits and withdrawals</li>
           </ul>
-          <a href="client/real/step-1.html">Create account</a>
+          <a href="client/real/step-1.php">Create account</a>
         </div>
         <div class="account__box">
           <h2>Demo account</h2>
