--- a/forexglobal/trading/platforms.html
+++ b/forexglobal/trading/platforms.html
@@ -31,7 +31,7 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../client/real/step-1.html">Real</a></li>
+              <li><a href="../client/real/step-1.php">Real</a></li>
               <li><a href="../client/demo.html">Demo</a></li>
               <li><a href="../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
@@ -143,7 +143,7 @@
           <hr>
           <p>ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders.</p>
           <p>A trader can execute trades manually or allocate a desirable amount to follow top performing traders, therefore diversifying the investment. The trader can also set risk management parameters in advance of any trading activity, in order to shield against any volatile trading strategy.</p>
-          <a class="inner__button  inner__button--start" href="../client/real/step-1.html">Start trading</a>
+          <a class="inner__button  inner__button--start" href="../client/real/step-1.php">Start trading</a>
           <a class="inner__button  inner__button--more" href="platforms/zulutrade.html">Read more</a>
         </div>
         <div class="inner__mockup  inner__mockup--zulu"></div>
