--- a/forexglobal/trading/platforms/webtrader.html
+++ b/forexglobal/trading/platforms/webtrader.html
@@ -31,7 +31,7 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../../client/real/step-1.html">Real</a></li>
+              <li><a href="../../client/real/step-1.php">Real</a></li>
               <li><a href="../../client/demo.html">Demo</a></li>
               <li><a href="../../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
@@ -171,7 +171,7 @@
         <div class="container">
           <h2>Try It Now</h2>
           <div class="inner__links">
-            <a class="inner__real" href="../../client/real/step-1.html">
+            <a class="inner__real" href="../../client/real/step-1.php">
               Real account<br>
               <span>start live trading</span>
             </a>
