--- a/investix/index.html
+++ b/investix/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <div class="container">
       <div class="header__flex">
-        <img class="header__logo" src="img/logo.png" alt="Investix">
+        <img class="header__logo" src="img/logo.svg" alt="Investix">
         <nav class="nav">
           <ul class="nav__list">
             <li><a href="#">Account Programs</a></li>
@@ -101,6 +101,350 @@
       </div>
     </div>
   </section>
+  <section class="live">
+    <div class="container">
+      <div class="live__flex">
+        <div class="live__box">
+          <h1 class="live__title">Join our live<br>trading chat room</h1>
+          <p class="live__text">New to day trading? Looking to improve your skill set? Join us in our online Trading ChatRoom and allow Meir Barak and his team to be your personal mentors. Join hundreds of traders from different countries; learn and mirror the trades of some of the world’s leading day traders.</p>
+          <a class="button  button--medium  live__button" href="#">14 Days Free Trial</a>
+          <a class="button  button--medium  button--white  live__button" href="#">Read More</a>
+        </div>
+        <div class="live__mockup"></div>
+      </div>
+    </div>
+  </section>
+  <section class="contact">
+    <div class="container">
+      <h1 class="contact__title">Like to know more?</h1>
+      <p class="contact__subtitle">If you have any questions about joining our trading academy, funded accounts programs, trading room or anything else, please contact us here and one of my team members will come back to you soon.</p>
+      <form class="contact__form" action="" method="post">
+        <div class="contact__flex">
+          <input class="contact__input" type="text" name="First Name" placeholder="Your Name">
+          <input class="contact__input" type="email" name="Email" placeholder="Your Email">
+        </div>
+        <div class="contact__flex">
+          <select class="contact__input  contact__input--select" name="Country" tabindex="0" required>
+            <option hidden>Country</option>
+            <option value="AF">Afghanistan</option>
+          	<option value="AX">Åland Islands</option>
+          	<option value="AL">Albania</option>
+          	<option value="DZ">Algeria</option>
+          	<option value="AS">American Samoa</option>
+          	<option value="AD">Andorra</option>
+          	<option value="AO">Angola</option>
+          	<option value="AI">Anguilla</option>
+          	<option value="AQ">Antarctica</option>
+          	<option value="AG">Antigua and Barbuda</option>
+          	<option value="AR">Argentina</option>
+          	<option value="AM">Armenia</option>
+          	<option value="AW">Aruba</option>
+          	<option value="AU">Australia</option>
+          	<option value="AT">Austria</option>
+          	<option value="AZ">Azerbaijan</option>
+          	<option value="BS">Bahamas</option>
+          	<option value="BH">Bahrain</option>
+          	<option value="BD">Bangladesh</option>
+          	<option value="BB">Barbados</option>
+          	<option value="BY">Belarus</option>
+          	<option value="BE">Belgium</option>
+          	<option value="BZ">Belize</option>
+          	<option value="BJ">Benin</option>
+          	<option value="BM">Bermuda</option>
+          	<option value="BT">Bhutan</option>
+          	<option value="BO">Bolivia, Plurinational State of</option>
+          	<option value="BQ">Bonaire, Sint Eustatius and Saba</option>
+          	<option value="BA">Bosnia and Herzegovina</option>
+          	<option value="BW">Botswana</option>
+          	<option value="BV">Bouvet Island</option>
+          	<option value="BR">Brazil</option>
+          	<option value="IO">British Indian Ocean Territory</option>
+          	<option value="BN">Brunei Darussalam</option>
+          	<option value="BG">Bulgaria</option>
+          	<option value="BF">Burkina Faso</option>
+          	<option value="BI">Burundi</option>
+          	<option value="KH">Cambodia</option>
+          	<option value="CM">Cameroon</option>
+          	<option value="CA">Canada</option>
+          	<option value="CV">Cape Verde</option>
+          	<option value="KY">Cayman Islands</option>
+          	<option value="CF">Central African Republic</option>
+          	<option value="TD">Chad</option>
+          	<option value="CL">Chile</option>
+          	<option value="CN">China</option>
+          	<option value="CX">Christmas Island</option>
+          	<option value="CC">Cocos (Keeling) Islands</option>
+          	<option value="CO">Colombia</option>
+          	<option value="KM">Comoros</option>
+          	<option value="CG">Congo</option>
+          	<option value="CD">Congo, the Democratic Republic of the</option>
+          	<option value="CK">Cook Islands</option>
+          	<option value="CR">Costa Rica</option>
+          	<option value="CI">Côte d'Ivoire</option>
+          	<option value="HR">Croatia</option>
+          	<option value="CU">Cuba</option>
+          	<option value="CW">Curaçao</option>
+          	<option value="CY">Cyprus</option>
+          	<option value="CZ">Czech Republic</option>
+          	<option value="DK">Denmark</option>
+          	<option value="DJ">Djibouti</option>
+          	<option value="DM">Dominica</option>
+          	<option value="DO">Dominican Republic</option>
+          	<option value="EC">Ecuador</option>
+          	<option value="EG">Egypt</option>
+          	<option value="SV">El Salvador</option>
+          	<option value="GQ">Equatorial Guinea</option>
+          	<option value="ER">Eritrea</option>
+          	<option value="EE">Estonia</option>
+          	<option value="ET">Ethiopia</option>
+          	<option value="FK">Falkland Islands (Malvinas)</option>
+          	<option value="FO">Faroe Islands</option>
+          	<option value="FJ">Fiji</option>
+          	<option value="FI">Finland</option>
+          	<option value="FR">France</option>
+          	<option value="GF">French Guiana</option>
+          	<option value="PF">French Polynesia</option>
+          	<option value="TF">French Southern Territories</option>
+          	<option value="GA">Gabon</option>
+          	<option value="GM">Gambia</option>
+          	<option value="GE">Georgia</option>
+          	<option value="DE">Germany</option>
+          	<option value="GH">Ghana</option>
+          	<option value="GI">Gibraltar</option>
+          	<option value="GR">Greece</option>
+          	<option value="GL">Greenland</option>
+          	<option value="GD">Grenada</option>
+          	<option value="GP">Guadeloupe</option>
+          	<option value="GU">Guam</option>
+          	<option value="GT">Guatemala</option>
+          	<option value="GG">Guernsey</option>
+          	<option value="GN">Guinea</option>
+          	<option value="GW">Guinea-Bissau</option>
+          	<option value="GY">Guyana</option>
+          	<option value="HT">Haiti</option>
+          	<option value="HM">Heard Island and McDonald Islands</option>
+          	<option value="VA">Holy See (Vatican City State)</option>
+          	<option value="HN">Honduras</option>
+          	<option value="HK">Hong Kong</option>
+          	<option value="HU">Hungary</option>
+          	<option value="IS">Iceland</option>
+          	<option value="IN">India</option>
+          	<option value="ID">Indonesia</option>
+          	<option value="IR">Iran, Islamic Republic of</option>
+          	<option value="IQ">Iraq</option>
+          	<option value="IE">Ireland</option>
+          	<option value="IM">Isle of Man</option>
+          	<option value="IL">Israel</option>
+          	<option value="IT">Italy</option>
+          	<option value="JM">Jamaica</option>
+          	<option value="JP">Japan</option>
+          	<option value="JE">Jersey</option>
+          	<option value="JO">Jordan</option>
+          	<option value="KZ">Kazakhstan</option>
+          	<option value="KE">Kenya</option>
+          	<option value="KI">Kiribati</option>
+          	<option value="KP">Korea, Democratic People's Republic of</option>
+          	<option value="KR">Korea, Republic of</option>
+          	<option value="KW">Kuwait</option>
+          	<option value="KG">Kyrgyzstan</option>
+          	<option value="LA">Lao People's Democratic Republic</option>
+          	<option value="LV">Latvia</option>
+          	<option value="LB">Lebanon</option>
+          	<option value="LS">Lesotho</option>
+          	<option value="LR">Liberia</option>
+          	<option value="LY">Libya</option>
+          	<option value="LI">Liechtenstein</option>
+          	<option value="LT">Lithuania</option>
+          	<option value="LU">Luxembourg</option>
+          	<option value="MO">Macao</option>
+          	<option value="MK">Macedonia, the former Yugoslav Republic of</option>
+          	<option value="MG">Madagascar</option>
+          	<option value="MW">Malawi</option>
+          	<option value="MY">Malaysia</option>
+          	<option value="MV">Maldives</option>
+          	<option value="ML">Mali</option>
+          	<option value="MT">Malta</option>
+          	<option value="MH">Marshall Islands</option>
+          	<option value="MQ">Martinique</option>
+          	<option value="MR">Mauritania</option>
+          	<option value="MU">Mauritius</option>
+          	<option value="YT">Mayotte</option>
+          	<option value="MX">Mexico</option>
+          	<option value="FM">Micronesia, Federated States of</option>
+          	<option value="MD">Moldova, Republic of</option>
+          	<option value="MC">Monaco</option>
+          	<option value="MN">Mongolia</option>
+          	<option value="ME">Montenegro</option>
+          	<option value="MS">Montserrat</option>
+          	<option value="MA">Morocco</option>
+          	<option value="MZ">Mozambique</option>
+          	<option value="MM">Myanmar</option>
+          	<option value="NA">Namibia</option>
+          	<option value="NR">Nauru</option>
+          	<option value="NP">Nepal</option>
+          	<option value="NL">Netherlands</option>
+          	<option value="NC">New Caledonia</option>
+          	<option value="NZ">New Zealand</option>
+          	<option value="NI">Nicaragua</option>
+          	<option value="NE">Niger</option>
+          	<option value="NG">Nigeria</option>
+          	<option value="NU">Niue</option>
+          	<option value="NF">Norfolk Island</option>
+          	<option value="MP">Northern Mariana Islands</option>
+          	<option value="NO">Norway</option>
+          	<option value="OM">Oman</option>
+          	<option value="PK">Pakistan</option>
+          	<option value="PW">Palau</option>
+          	<option value="PS">Palestinian Territory, Occupied</option>
+          	<option value="PA">Panama</option>
+          	<option value="PG">Papua New Guinea</option>
+          	<option value="PY">Paraguay</option>
+          	<option value="PE">Peru</option>
+          	<option value="PH">Philippines</option>
+          	<option value="PN">Pitcairn</option>
+          	<option value="PL">Poland</option>
+          	<option value="PT">Portugal</option>
+          	<option value="PR">Puerto Rico</option>
+          	<option value="QA">Qatar</option>
+          	<option value="RE">Réunion</option>
+          	<option value="RO">Romania</option>
+          	<option value="RU">Russian Federation</option>
+          	<option value="RW">Rwanda</option>
+          	<option value="BL">Saint Barthélemy</option>
+          	<option value="SH">Saint Helena, Ascension and Tristan da Cunha</option>
+          	<option value="KN">Saint Kitts and Nevis</option>
+          	<option value="LC">Saint Lucia</option>
+          	<option value="MF">Saint Martin (French part)</option>
+          	<option value="PM">Saint Pierre and Miquelon</option>
+          	<option value="VC">Saint Vincent and the Grenadines</option>
+          	<option value="WS">Samoa</option>
+          	<option value="SM">San Marino</option>
+          	<option value="ST">Sao Tome and Principe</option>
+          	<option value="SA">Saudi Arabia</option>
+          	<option value="SN">Senegal</option>
+          	<option value="RS">Serbia</option>
+          	<option value="SC">Seychelles</option>
+          	<option value="SL">Sierra Leone</option>
+          	<option value="SG">Singapore</option>
+          	<option value="SX">Sint Maarten (Dutch part)</option>
+          	<option value="SK">Slovakia</option>
+          	<option value="SI">Slovenia</option>
+          	<option value="SB">Solomon Islands</option>
+          	<option value="SO">Somalia</option>
+          	<option value="ZA">South Africa</option>
+          	<option value="GS">South Georgia and the South Sandwich Islands</option>
+          	<option value="SS">South Sudan</option>
+          	<option value="ES">Spain</option>
+          	<option value="LK">Sri Lanka</option>
+          	<option value="SD">Sudan</option>
+          	<option value="SR">Suriname</option>
+          	<option value="SJ">Svalbard and Jan Mayen</option>
+          	<option value="SZ">Swaziland</option>
+          	<option value="SE">Sweden</option>
+          	<option value="CH">Switzerland</option>
+          	<option value="SY">Syrian Arab Republic</option>
+          	<option value="TW">Taiwan, Province of China</option>
+          	<option value="TJ">Tajikistan</option>
+          	<option value="TZ">Tanzania, United Republic of</option>
+          	<option value="TH">Thailand</option>
+          	<option value="TL">Timor-Leste</option>
+          	<option value="TG">Togo</option>
+          	<option value="TK">Tokelau</option>
+          	<option value="TO">Tonga</option>
+          	<option value="TT">Trinidad and Tobago</option>
+          	<option value="TN">Tunisia</option>
+          	<option value="TR">Turkey</option>
+          	<option value="TM">Turkmenistan</option>
+          	<option value="TC">Turks and Caicos Islands</option>
+          	<option value="TV">Tuvalu</option>
+          	<option value="UG">Uganda</option>
+          	<option value="UA">Ukraine</option>
+          	<option value="AE">United Arab Emirates</option>
+          	<option value="GB">United Kingdom</option>
+          	<option value="US">United States</option>
+          	<option value="UM">United States Minor Outlying Islands</option>
+          	<option value="UY">Uruguay</option>
+          	<option value="UZ">Uzbekistan</option>
+          	<option value="VU">Vanuatu</option>
+          	<option value="VE">Venezuela, Bolivarian Republic of</option>
+          	<option value="VN">Viet Nam</option>
+          	<option value="VG">Virgin Islands, British</option>
+          	<option value="VI">Virgin Islands, U.S.</option>
+          	<option value="WF">Wallis and Futuna</option>
+          	<option value="EH">Western Sahara</option>
+          	<option value="YE">Yemen</option>
+          	<option value="ZM">Zambia</option>
+          	<option value="ZW">Zimbabwe</option>
+          </select>
+          <div class="contact__double">
+            <input class="contact__input  contact__input--code" type="text" name="Country Code" placeholder="+000" disabled>
+            <input class="contact__input  contact__input--phone" type="tel" name="Phone" placeholder="Phone">
+          </div>
+        </div>
+        <button class="button  button--big  contact__submit" type="submit" name="Submit">Submit</button>
+      </form>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <img class="footer__logo" src="img/logo-white.svg" alt="Investix">
+      <div class="footer__flex">
+        <ul class="footer__list">
+          <li><b>Education</b></li>
+          <li><a href="#">Self Study Course</a></li>
+          <li><a href="#">Star Trader Course</a></li>
+          <li><a href="#">Top Trader Course</a></li>
+          <li><a href="#">Mentorship Program</a></li>
+          <li><a href="#">Forex, Commodities & EU</a></li>
+          <li><a href="#">Markets Course</a></li>
+          <li><a href="#">Free Day Trading Course!</a></li>
+        </ul>
+        <ul class="footer__list">
+          <li><b>Funded Accounts</b></li>
+          <li><a href="#">Intro Program</a></li>
+          <li><a href="#">Student Program</a></li>
+          <li><a href="#">Expert Program</a></li>
+          <li><a href="#">Pro Program</a></li>
+        </ul>
+        <ul class="footer__list">
+          <li><b>About</b></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">About Meir Barak</a></li>
+          <li><a href="#">Meet Out Team</a></li>
+          <li><a href="#">Partners</a></li>
+          <li><a href="#">Refer A Friend</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+        <ul class="footer__list">
+          <li><b>Contact information</b></li>
+          <li><a class="footer__phone" href="tel:+442036420372">+44-20-36420372</a></li>
+          <li><a class="footer__email" href="mailto:info@tradenet.com">info@tradenet.com</a></li>
+          <li><a class="footer__home" href="https://www.tradenet.com">www.tradenet.com</a></li>
+          <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr class="footer__hr">
+    <div class="container">
+      <p class="footer__text">Tradenet is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Tradenet, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
+      <p class="footer__text">All purchases are made exclusively to the merchant Tradenet for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Tradenet as it is completely independent from Tradenet’s educational services and relevant package pricing.</p>
+    </div>
+    <div class="footer__copyright">
+      <div class="container">
+        <div class="footer__inner">
+          <p class="footer__copy">© 2018 All rights reserved</p>
+          <ul class="footer__rules">
+            <li><a href="#">Terms of Use</a></li>
+            <li>|</li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li>
+              <button class="footer__up" type="button"></button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
