--- a/investix/index.html
+++ b/investix/index.html
@@ -437,8 +437,8 @@
             <li><a href="#">Terms of Use</a></li>
             <li>|</li>
             <li><a href="#">Privacy Policy</a></li>
-            <li>
-              <button class="footer__up" type="button"></button>
+            <li class="footer__up">
+              <button type="button"></button>
             </li>
           </ul>
         </div>
