--- a/investix/index.html
+++ b/investix/index.html
@@ -3,10 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Investix</title>
   <link rel="stylesheet" href="css/style.min.css">
-  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="msapplication-config" content="browserconfig.xml">
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
   <!-- Slick -->
   <link rel="stylesheet" href="js/slick/slick.css"/>
   <link rel="stylesheet" href="js/slick/slick-theme.css"/>
@@ -446,6 +457,7 @@
     </div>
   </footer>
   <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-plugins.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
 </body>
