--- a/investix/index.html
+++ b/investix/index.html
@@ -29,8 +29,24 @@
         <img class="header__logo" src="img/logo.svg" alt="Investix">
         <nav class="nav">
           <ul class="nav__list">
-            <li><a href="#">Account Programs</a></li>
-            <li><a href="#">Education</a></li>
+            <li>
+              <a>Account Programs</a>
+              <ul class="nav__sublist">
+                <li><a href="#">Intro Program</a></li>
+                <li><a href="#">Student Program</a></li>
+                <li><a href="#">Expert Program</a></li>
+                <li><a href="#">Pro Program</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Education</a>
+              <ul class="nav__sublist">
+                <li><a href="#">Intro Program</a></li>
+                <li><a href="#">Student Program</a></li>
+                <li><a href="#">Expert Program</a></li>
+                <li><a href="#">Pro Program</a></li>
+              </ul>
+            </li>
             <li><a href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
             <li><a href="#">Contacts</a></li>
