--- a/forexglobal/trading/announcements.html
+++ b/forexglobal/trading/announcements.html
@@ -105,6 +105,7 @@
       <h1 class="inner__name">Announcements</h1>
       <ul class="announcements__list">
         <li><b>May 2018</b></li>
+        <li><a href="../img/pdf/Private-Policy-Update.pdf" target="_blank">Private Policy Update in May 2018</a></li>
         <li><a href="../img/pdf/Market-Holidays-in-May-2018.pdf" target="_blank">Market Holidays in May 2018</a></li>
       </ul>
       <ul class="announcements__list">
