--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="js/slick/slick.css"/>
   <link rel="stylesheet" href="js/slick/slick-theme.css"/>
 </head>
-<body><link rel="mask-icon" href="favicon.svg" color="#2f358f">
+<body>
   <section class="title">
     <header class="header">
       <div class="header__container">
