--- a/investix/index.html
+++ b/investix/index.html
@@ -55,7 +55,7 @@
             <!-- </li> -->
           </ul>
         </nav>
-        <a class="button  button--small" href="#">14 Days Free Trial</a>
+        <a class="button  button--small  header__button" href="#">14 Days Free Trial</a>
       </div>
     </div>
   </header>
