--- a/investix/index.html
+++ b/investix/index.html
@@ -27,6 +27,7 @@
     <div class="container">
       <div class="header__flex">
         <img class="header__logo" src="img/logo.svg" alt="Investix">
+        <button class="header__toggle" type="button"></button>
         <nav class="nav">
           <ul class="nav__list">
             <li>
@@ -65,7 +66,7 @@
         <div class="slider__text">
           <h1 class="slider__title">Day Trading Education Package</h1>
           <p class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
-          <a class="button button--small" href="#">Get Started</a>
+          <a class="button button--small  slider__button" href="#">Get Started</a>
         </div>
         <div class="slider__img"></div>
       </div>
@@ -83,7 +84,7 @@
           <p class="info__text">Enjoy extra income, and gain financial security by learning this great profession in our Day Trading Academy.</p>
           <p class="info__text">Since 2004, Tradenet live day trading academy has educated more than 30,000 professional traders worldwide.</p>
           <p class="info__text">You are welcome to select between our basic and advanced courses, or combine them in our world renowned Mentorship Program.</p>
-          <a class="button  button--small" href="#">Get Started</a>
+          <a class="button  button--small  info__button" href="#">Get Started</a>
         </div>
       </div>
     </div>
