full mobile version

--- a/investix/index.html
+++ b/investix/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="header__flex">
         <img class="header__logo" src="img/logo.svg" alt="Investix">
-        <button class="header__toggle" type="button"></button>
+        <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
           <ul class="nav__list">
             <li>
@@ -477,5 +477,6 @@
   <script src="js/jquery-plugins.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
+  <script src="js/main.min.js" async></script>
 </body>
 </html>
