--- a/investix/index.html
+++ b/investix/index.html
@@ -99,7 +99,7 @@
             <b>Intro</b>
             Program
           </p>
-          <a class="button  button--small  services__button" href="#">Buy Now</a>
+          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
           <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
         </div>
         <div class="services__box  services__box--student">
@@ -107,7 +107,7 @@
             <b>Student</b>
             Program
           </p>
-          <a class="button  button--small  services__button" href="#">Buy Now</a>
+          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
           <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
         </div>
         <div class="services__box  services__box--expert">
@@ -115,7 +115,7 @@
             <b>Expert</b>
             Program
           </p>
-          <a class="button  button--small  services__button" href="#">Buy Now</a>
+          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
           <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
         </div>
         <div class="services__box  services__box--pro">
@@ -123,7 +123,7 @@
             <b>Pro</b>
             Program
           </p>
-          <a class="button  button--small  services__button" href="#">Buy Now</a>
+          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
           <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
         </div>
       </div>
